--- a/DBMS Project/Flask/templates/register.html
+++ b/DBMS Project/Flask/templates/register.html
@@ -20,35 +20,37 @@
 				{% endif %}
 
 			</div>
-			<div class="form-group">
-				{{ form.firstname.label(class="form-control-label") }}
+			<div class="form-row">
+				<div class="col">
+					{{ form.firstname.label(class="form-control-label") }}
 
-				{% if form.firstname.errors %}
-					{{ form.firstname(class="form-control form-control-lg is-invalid") }}	
-					<div class="invalid-feedback">
-						{% for error in form.firstname.errors %}
-							<span>{{ error }}</span>
-						{% endfor %}
-					</div>
-				{% else %}
-					{{ form.firstname(class="form-control form-control-lg") }}
-				{% endif %}
+					{% if form.firstname.errors %}
+						{{ form.firstname(class="form-control form-control-lg is-invalid") }}	
+						<div class="invalid-feedback">
+							{% for error in form.firstname.errors %}
+								<span>{{ error }}</span>
+							{% endfor %}
+						</div>
+					{% else %}
+						{{ form.firstname(class="form-control form-control-lg") }}
+					{% endif %}
 
-			</div>
-			<div class="form-group">
-				{{ form.lastname.label(class="form-control-label") }}
+				</div>
+				<div class="col">
+					{{ form.lastname.label(class="form-control-label") }}
 
-				{% if form.lastname.errors %}
-					{{ form.lastname(class="form-control form-control-lg is-invalid") }}	
-					<div class="invalid-feedback">
-						{% for error in form.lastname.errors %}
-							<span>{{ error }}</span>
-						{% endfor %}
-					</div>
-				{% else %}
-					{{ form.lastname(class="form-control form-control-lg") }}
-				{% endif %}
+					{% if form.lastname.errors %}
+						{{ form.lastname(class="form-control form-control-lg is-invalid") }}	
+						<div class="invalid-feedback">
+							{% for error in form.lastname.errors %}
+								<span>{{ error }}</span>
+							{% endfor %}
+						</div>
+					{% else %}
+						{{ form.lastname(class="form-control form-control-lg") }}
+					{% endif %}
 
+				</div>
 			</div>
 			<div class="form-group">
 				{{ form.email.label(class="form-control-label") }}
