--- a/DBMS Project/Flask/templates/login.html
+++ b/DBMS Project/Flask/templates/login.html
@@ -2,47 +2,50 @@
 
 
 {% block content %}
-	<h2>Login</h2>
-	<div class="content-section"></div>
-	<form method="POST" action="">
-		{{ form.hidden_tag() }}
-		<fieldset class="form-group">
-			<div class="form-group">
-				{{ form.email.label(class="form-control-label") }}
+	<div class="container">
+		<h2>Login</h2>
+		<div class="content-section"></div>
+		<form method="POST" action="">
+			{{ form.hidden_tag() }}
+			<fieldset class="form-group">
+				<div class="form-group">
+					{{ form.email.label(class="form-control-label") }}
 
-				{% if form.email.errors %}
-					{{ form.email(class="form-control form-control-lg is-invalid") }}	
-					<div class="invalid-feedback">
-						{% for error in form.email.errors %}
-							<span>{{ error }}</span>
-						{% endfor %}
-					</div>
-				{% else %}
-					{{ form.email(class="form-control form-control-lg") }}
-				{% endif %}
-			</div>
-			<div class="form-group">
-				{{ form.password.label(class="form-control-label") }}
+					{% if form.email.errors %}
+						{{ form.email(class="form-control form-control-lg is-invalid") }}	
+						<div class="invalid-feedback">
+							{% for error in form.email.errors %}
+								<span>{{ error }}</span>
+							{% endfor %}
+						</div>
+					{% else %}
+						{{ form.email(class="form-control form-control-lg") }}
+					{% endif %}
+				</div>
+				<div class="form-group">
+					{{ form.password.label(class="form-control-label") }}
 
-				{% if form.password.errors %}
-					{{ form.password(class="form-control form-control-lg is-invalid") }}	
-					<div class="invalid-feedback">
-						{% for error in form.password.errors %}
-							<span>{{ error }}</span>
-						{% endfor %}
-					</div>
-				{% else %}
-					{{ form.password(class="form-control form-control-lg") }}
-				{% endif %}
+					{% if form.password.errors %}
+						{{ form.password(class="form-control form-control-lg is-invalid") }}	
+						<div class="invalid-feedback">
+							{% for error in form.password.errors %}
+								<span>{{ error }}</span>
+							{% endfor %}
+						</div>
+					{% else %}
+						{{ form.password(class="form-control form-control-lg") }}
+					{% endif %}
+				</div>
+			</fieldset>
+			<div class="form-group">
+				{{ form.submit(class="btn btn-primary") }}
 			</div>
-		</fieldset>
-		<div class="form-group">
-			{{ form.submit(class="btn btn-primary") }}
-		</div>
-		<small>
-			<a href="#">Forgot Password?</a>
-		</small>
-		<hr>
-		<small>Create An Account? <a href="{{ url_for('register') }}">Sign Up</a></small>
-		<hr>
+			<small>
+				<a href="#">Forgot Password?</a>
+			</small>
+			<hr>
+			<small>Create An Account? <a href="{{ url_for('register') }}">Sign Up</a></small>
+			<hr>
+		</form>
+	</div>
 {% endblock content %}
