--- a/DBMS Project/Flask/templates/amazon.html
+++ b/DBMS Project/Flask/templates/amazon.html
@@ -4,76 +4,45 @@
 
 {% block content %}
 	<div class="container">
-		<form class="form" action="/amazon" method="POST">
-			<label class="my-1 mr-2" for="inlineFormCustomSelectPref">Show Name</label>
-			<input class="form-control form-control-lg" type="text" placeholder="Name" required name="name">
-			<button type="submit" class="btn btn-primary my-1">Submit</button>
-		</form>
-		<hr>
-
+		<a href="{{ url_for('amazon_name') }}">Search by name</a>
 		<form class="form" action="/amazon" method="POST">
 			<div class="form-group mx-sm-3 mb-2">
+
 				<label class="my-1 mr-2" for="inlineFormCustomSelectPref">Actor</label>
 			  	<select class="custom-select my-1" id="inlineFormCustomSelectPref" required name="actor" style="margin-right: 85px">
-			    	<option selected>Choose...</option>
-			   		<option value="1">One</option>
-			    	<option value="2">Two</option>
-			    	<option value="3">Three</option>
+			    	<option value="null">NULL</option>
+			   		<option value="Brad Pitt">Brad Pitt</option>
+			    	<option value="Dwayne Johnson">Dwayne Johnson</option>
+			    	<option value="Rajkummar Rao">Rajkummar Rao</option>
 			  	</select>
 			  	<label class="my-1 mr-2" for="inlineFormCustomSelectPref">Director</label>
-			  	<select class="custom-select my-1" id="inlineFormCustomSelectPref" required name="director"  style="margin-right:85px">
-			    	<option selected>Choose...</option>
-			   		<option value="1">One</option>
-			    	<option value="2">Two</option>
-			    	<option value="3">Three</option>
+			  	<select class="custom-select my-1" id="inlineFormCustomSelectPref" required name="director" style="margin-right:85px">
+			    	<option value="null">NULL</option>
+			   		<option value="Tarantino">Tarantino</option>
+			    	<option value="Rawson Marshall Thurber">Rawson Marshall Thurber</option>
+			    	<option value="Amit Masurkar">Amit Masurkar</option>
 			  	</select>
 			  	<label class="my-1 mr-2" for="inlineFormCustomSelectPref">Genre</label>
 			  	<select class="custom-select my-1" id="inlineFormCustomSelectPref"required name="genre"  style="margin-right: 85px">
-			    	<option selected>Choose...</option>
-			   		<option value="1">One</option>
-			    	<option value="2">Two</option>
-			    	<option value="3">Three</option>
+			    	<option value="null">NULL</option>
+			   		<option value="Action">Action</option>
+			    	<option value="Comedy">Comedy</option>
+			    	<option value="Drama">Drama</option>
 			  	</select>
 			  	<label class="my-1 mr-2" for="inlineFormCustomSelectPref">Year</label>
-			  	<select class="custom-select my-1" id="inlineFormCustomSelectPref" required name="year" style="margin-right: 85px">
-			    	<option selected>Choose...</option>
-			   		<option value="1">2018</option>
-			    	<option value="2">2017</option>
-			    	<option value="3">2016</option>
-			    	<option value="4">2015</option>
-			    	<option value="5">2014</option>
-			    	<option value="6">2013</option>
-			    	<option value="7">2012</option>
-			    	<option value="8">2011</option>
-			    	<option value="9">2010</option>
-			    	<option value="10">2009</option>
-			    	<option value="11">2008</option>
-			    	<option value="12">2007</option>
-			    	<option value="13">2006</option>
-			    	<option value="14">2005</option>
-			    	<option value="16">2004</option>
-			    	<option value="17">2003</option>
-			    	<option value="18">2002</option>
-			    	<option value="19">2001</option>
-			    	<option value="20">2000</option>
-			    	<option value="21">Before 2000</option>
+			  		<select class="custom-select my-1" id="inlineFormCustomSelectPref" required name="year" style="margin-right: 85px">
+			    	<option value="null">0</option>
+			   		<option value="2013">2013</option>
+			    	<option value="2016">2016</option>
+			    	<option value="2017">2017</option>
 			  	</select>
-			  	<button type="submit" class="btn btn-primary my-1">Submit</button>
+			  	<button type="submit" class="btn btn-primary my-1" method = 'POST'>Submit</button>
 		  	</div>
 		</form>	
 	</div>
 	<div>
 		<h1>MOVIES</h1>
 		<table>
-			<tr>
-				<th>Name</th>
-				<th>Genre</th>
-				<th>Director</th>
-				<th>IMDb</th>
-				<th>Cast 1</th>
-				<th>Cast 2</th>
-				<th>Release Year</th>
-			</tr>
 			{% for item in data1 %}
 				<tr>
 					<td>{{ item[1] }}</td>
@@ -88,18 +57,8 @@
 		</table>
 	</div>
 	<div>
-		<h1>SHOWS/h1>
+		<h1>SHOWS</h1>
 		<table>
-			<tr>
-				<th>Name</th>
-				<th>Genre</th>
-				<th>Director</th>
-				<th>IMDb</th>
-				<th>Cast 1</th>
-				<th>Cast 2</th>
-				<th>Release Year</th>
-				<th>Seasons</th>
-			</tr>
 			{% for item in data2 %}
 				<tr>
 					<td>{{ item[1] }}</td>
@@ -112,6 +71,7 @@
 					<td>{{ item[16] }}</td>
 				</tr>
 			{% endfor %}
+			<tr>{{ data3 }}</tr>
 		</table>
 	</div>
 {% endblock content %}
