--- a/DBMS Project/Flask/templates/hotstar.html
+++ b/DBMS Project/Flask/templates/hotstar.html
@@ -4,12 +4,7 @@
 
 {% block content %}
 	<div class="container">
-		<form class="form" action="/hotstar" method="POST">
-			<label class="my-1 mr-2" for="inlineFormCustomSelectPref">Show Name</label>
-			<input class="form-control form-control-lg" type="text" placeholder="Name" required name="name">
-			<button type="submit" class="btn btn-primary my-1">Submit</button>
-		</form>
-		<hr>
+	<a href="{{ url_for('hotstar_name') }}">Search by name</a>
 		
 		<form class="form" action="/hotstar" method="POST">
 			<div class="form-group mx-sm-3 mb-2">
@@ -38,7 +33,7 @@
 				<label class="my-1 mr-2" for="inlineFormCustomSelectPref">Year</label>
 				<input class="form-control form-control-lg" type="text" placeholder="Year" required name="year">
 
-				<button type="submit" class="btn btn-primary my-1">Submit</button>
+				<button type="submit" class="btn btn-primary my-1" method = 'POST'>Submit</button>
 			</div>
 		</form>	
 	</div>
@@ -54,22 +49,22 @@
 				<th>Cast 2</th>
 				<th>Release Year</th>
 			</tr>
+
 			{% for item in data1 %}
 				<tr>
-					<!-- <td>{{ item[1][1] }}</td>
+					<td>{{ item[1][1] }}</td>
 					<td>{{ item[4][4] }}</td>
 					<td>{{ item[13][13] }}</td>
 					<td>{{ item[5][5] }}</td>
 					<td>{{ item[7][7] }}</td>
 					<td>{{ item[8][8] }}</td>
-					<td>{{ item[14][14] }}</td> -->
-					<td>{{ item}}</td>
+					<td>{{ item[14][14] }}</td>
 				</tr>
 			{% endfor %}
 		</table>
 	</div>
 	<div>
-		<h1>SHOWS/h1>
+		<h1>SHOWS</h1>
 		<table>
 			<tr>
 				<th>Name</th>
@@ -83,16 +78,14 @@
 			</tr>
 			{% for item in data2 %}
 				<tr>
-					<!-- <td>{{ item[1] }}</td>
+					<td>{{ item[1] }}</td>
 					<td>{{ item[4] }}</td>
 					<td>{{ item[13] }}</td>
 					<td>{{ item[5] }}</td>
 					<td>{{ item[7] }}</td>
 					<td>{{ item[8] }}</td>
 					<td>{{ item[14] }}</td>
-					<td>{{ item[16] }}</td> -->
-					<td>{{ item }}</td>
-
+					<td>{{ item[16] }}</td>
 				</tr>
 			{% endfor %}
 		</table>
