--- a/DBMS Project/Flask/templates/netflix.html
+++ b/DBMS Project/Flask/templates/netflix.html
@@ -55,6 +55,7 @@
 					<td>{{ item[7] }}</td>
 					<td>{{ item[8] }}</td>
 					<td>{{ item[14] }}</td>
+					<button type="submit" class="btn btn-primary my-1">Submit</button>
 				</tr>
 			{% endfor %}
 		</table>
@@ -82,6 +83,7 @@
 					<td>{{ item[8] }}</td>
 					<td>{{ item[14] }}</td>
 					<td>{{ item[16] }}</td>
+					<button type="submit" class="btn btn-primary my-1">Submit</button>
 				</tr>
 			{% endfor %}
 		</table>
