--- a/DBMS Project/Flask/templates/hotstar.html
+++ b/DBMS Project/Flask/templates/hotstar.html
@@ -52,13 +52,13 @@
 
 			{% for item in data1 %}
 				<tr>
-					<td>{{ item[1][1] }}</td>
-					<td>{{ item[4][4] }}</td>
-					<td>{{ item[13][13] }}</td>
-					<td>{{ item[5][5] }}</td>
-					<td>{{ item[7][7] }}</td>
-					<td>{{ item[8][8] }}</td>
-					<td>{{ item[14][14] }}</td>
+					<td>{{ item[1] }}</td>
+					<td>{{ item[4] }}</td>
+					<td>{{ item[13] }}</td>
+					<td>{{ item[5] }}</td>
+					<td>{{ item[7] }}</td>
+					<td>{{ item[8] }}</td>
+					<td>{{ item[14] }}</td>
 				</tr>
 			{% endfor %}
 		</table>
