--- a/DBMS Project/Flask/templates/hotstarname.html
+++ b/DBMS Project/Flask/templates/hotstarname.html
@@ -33,7 +33,7 @@
 			{% for item in Name2 %}
 				<tr>
 					<td>{{ item[1] }}</td>
-					<td>{{ item[4] }}</td>
+					<td>{{ item[4] }}</td>a
 					<td>{{ item[13] }}</td>
 					<td>{{ item[5] }}</td>
 					<td>{{ item[7] }}</td>
