--- a/DBMS Project/Flask/templates/feedback.html
+++ b/DBMS Project/Flask/templates/feedback.html
@@ -5,8 +5,11 @@
 {% block content %}
 	<div class="container">
 		<form class="form" action="/feedbacksubmit" method="POST">
-			<h1>{{movie_name}}</h1>
-			<h1>{{idd}}</h1>
+			{% for item in movie_name %}
+			<h1>{{item}}</h1>
+			{% endfor %}
+			<h1>{{idd}}</h1> 
+			<!-- <h1>{{idd}}</h1> -->
 			<label class="my-1 mr-2" for="inlineFormCustomSelectPref">Rating</label>
 				<select class="custom-select my-1" id="inlineFormCustomSelectPref" required name="rating"  style="margin-right:85px">
 					<option selected>choose..</option>
@@ -16,6 +19,8 @@
 					<option value="4">4</option>
 					<option value="5">5</option>
 				</select>
+			<label for="comment">Comment:</label>
+  				<textarea class="form-control" required name="comment" rows="5" id="comment"></textarea>
 			<button type="submit" class="btn btn-primary my-1" method = 'POST'>Submit</button>
 		</form>	
 	</div>
