--- a/DBMS Project/Flask/templates/layout.html
+++ b/DBMS Project/Flask/templates/layout.html
@@ -21,7 +21,7 @@
                     <a class="nav-link" href="{{ url_for('home') }}">Home <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Watchlist</a>
+                    <a class="nav-link" href="{{ url_for('watchlistDisplay') }}">Watchlist</a>
                   </li>
                   <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -39,10 +39,10 @@
               </ul>
               <ul class="nav navbar-nav navbar-right">
                 <li class="nav-item">
-                  <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+                  <a class="nav-link" href="#">{{ logged_user }}</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="{{ url_for('register') }}">Sign-Up</a>
+                  <a class="nav-link" href="{{ url_for('login') }}">Sign-Out</a>
                 </li>
               </ul>
            </div>
