--- a/DBMS Project/Flask/templates/register.html
+++ b/DBMS Project/Flask/templates/register.html
@@ -1,29 +1,19 @@
-{% extends "layout.html" %}
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-
-{% block content %}
+  </head>
+<body>
 	<div class="container">
 		<h2>Sign-Up to get started!</h2>
 		<div class="content-section"></div>
 		<form method="POST" action="">
 			{{ form.hidden_tag() }}
 			<fieldset class="form-group">
-				<div class="form-group">
-					{{ form.username.label(class="form-control-label") }}
-
-					{% if form.username.errors %}
-						{{ form.username(class="form-control form-control-lg is-invalid") }}	
-						<div class="invalid-feedback">
-							{% for error in form.username.errors %}
-								<span>{{ error }}</span>
-							{% endfor %}
-						</div>
-					{% else %}
-						{{ form.username(class="form-control form-control-lg") }}
-					{% endif %}
-
-				</div>
 				<div class="form-row">
 					<div class="col">
 						{{ form.firstname.label(class="form-control-label") }}
@@ -107,4 +97,9 @@
 			<small class="text-capitalize">Fields Marked with * are mandatory</small>
 		</form>
 	</div>
-{% endblock content %}
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  </body>
+</body>
+</html>
