--- a/DBMS Project/Flask/templates/amazon.html
+++ b/DBMS Project/Flask/templates/amazon.html
@@ -14,6 +14,7 @@
 			   		<option value="Brad Pitt">Brad Pitt</option>
 			    	<option value="Dwayne Johnson">Dwayne Johnson</option>
 			    	<option value="Rajkummar Rao">Rajkummar Rao</option>
+			    	<option value="Amy Ryan">Amy Ryan</option>
 			  	</select>
 			  	<label class="my-1 mr-2" for="inlineFormCustomSelectPref">Director</label>
 			  	<select class="custom-select my-1" id="inlineFormCustomSelectPref" required name="director" style="margin-right:85px">
