--- a/DBMS Project/Flask/templates/layout.html
+++ b/DBMS Project/Flask/templates/layout.html
@@ -34,7 +34,7 @@
                     </div>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Suggestions</a>
+                    <a class="nav-link" href="#">Recommendation</a>
                   </li>
               </ul>
               <ul class="nav navbar-nav navbar-right">
