--- a/DBMS Project/Flask/templates/register.html
+++ b/DBMS Project/Flask/templates/register.html
@@ -11,7 +11,7 @@
 	<div class="container">
 		<h2>Sign-Up to get started!</h2>
 		<div class="content-section"></div>
-		<form method="POST" action="">
+		<form method="POST" action="/register">
 			{{ form.hidden_tag() }}
 			<fieldset class="form-group">
 				<div class="form-row">
