--- a/DBMS Project/Flask/templates/hotstar.html
+++ b/DBMS Project/Flask/templates/hotstar.html
@@ -31,7 +31,7 @@
 				</select>
 				
 				<label class="my-1 mr-2" for="inlineFormCustomSelectPref">Year</label>
-				<input class="form-control form-control-lg" type="text" placeholder="Year" required name="year">
+				<input class="form-control form-control-lg" type="text" placeholder="Year" required name="year" value="0">
 
 				<button type="submit" class="btn btn-primary my-1" method = 'POST'>Submit</button>
 			</div>
