--- a/DBMS Project/Flask/templates/watchlist.html
+++ b/DBMS Project/Flask/templates/watchlist.html
@@ -19,4 +19,21 @@
 			{% endfor %}
 		</table>
 	</div>
+
+
+    <div>
+		<h1>RECOMMENDATION</h1>
+			<table>
+				{% for item in data3 %} 
+					<tr>
+						<td>{{ item[0] }}</td>
+						<td>{{ item[1] }}</td>
+					</tr>
+				{% endfor %}
+
+			</table>
+	</div>
+
+
+
 {% endblock %}
