--- a/DBMS Project/Flask/templates/watchlist.html
+++ b/DBMS Project/Flask/templates/watchlist.html
@@ -22,7 +22,7 @@
 
 
     <div>
-		<h1>RECOMMENDATION</h1>
+		<h1>RECOMMENDATION BASED ON YOUR LATEST PICK</h1>
 			<table>
 				{% for item in data3 %} 
 					<tr>
