--- a/DBMS Project/Flask/templates/layout.html
+++ b/DBMS Project/Flask/templates/layout.html
@@ -33,9 +33,9 @@
                         <a class="dropdown-item" target="_blank" href="{{ url_for('hotstar') }}">Hotstar</a>
                     </div>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Recommendation</a>
-                  </li>
+                 <!--  <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('recommend') }}">Recommendation</a>
+                  </li> -->
               </ul>
               <ul class="nav navbar-nav navbar-right">
                 <li class="nav-item">
