--- a/DBMS Project/Flask/templates/netflix.html
+++ b/DBMS Project/Flask/templates/netflix.html
@@ -7,30 +7,37 @@
 		<a href="{{ url_for('netflix_name') }}">Search by name</a>
 		<form class="form" action="/netflix" method="POST">
 			<div class="form-group mx-sm-3 mb-2">
-				<label class="my-1 mr-2" for="inlineFormCustomSelectPref" >Actor</label>
+
+				<label class="my-1 mr-2" for="inlineFormCustomSelectPref">Actor</label>
 			  	<select class="custom-select my-1" id="inlineFormCustomSelectPref" required name="actor" style="margin-right: 85px">
-			    	<option selected>null</option>
-			   		<option value="1">One</option>
-			    	<option value="2">Two</option>
-			    	<option value="3">Three</option>
+			    	<option value="null">NULL</option>
+			   		<option value="Brad Pitt">Brad Pitt</option>
+			    	<option value="Dwayne Johnson">Dwayne Johnson</option>
+			    	<option value="Rajkummar Rao">Rajkummar Rao</option>
+			    	<option value="Amy Ryan">Amy Ryan</option>
 			  	</select>
-			  	<label class="my-1 mr-2" for="inlineFormCustomSelectPref">Director</direabel> 
-			  	<select class="custom-select my-1" id="inlineFormCustomSelectPref"  required name="director" style="margin-right:85px">
-			    	<option selected>null</option>
-			   		<option value="1">One</option>
-			    	<option value="2">Two</option>
-			    	<option value="3">Three</option>
+			  	<label class="my-1 mr-2" for="inlineFormCustomSelectPref">Director</label>
+			  	<select class="custom-select my-1" id="inlineFormCustomSelectPref" required name="director" style="margin-right:85px">
+			    	<option value="null">NULL</option>
+			   		<option value="Tarantino">Tarantino</option>
+			    	<option value="Rawson Marshall Thurber">Rawson Marshall Thurber</option>
+			    	<option value="Amit Masurkar">Amit Masurkar</option>
 			  	</select>
 			  	<label class="my-1 mr-2" for="inlineFormCustomSelectPref">Genre</label>
-			  	<select class="custom-select my-1" id="inlineFormCustomSelectPref" required name="genre" style="margin-right: 85px">
-			    	<option selected>null</option>
-			   		<option value="1">One</option>
-			    	<option value="2">Two</option>
-			    	<option value="3">Three</option>
+			  	<select class="custom-select my-1" id="inlineFormCustomSelectPref"required name="genre"  style="margin-right: 85px">
+			    	<option value="null">NULL</option>
+			   		<option value="Action">Action</option>
+			    	<option value="Comedy">Comedy</option>
+			    	<option value="Drama">Drama</option>
 			  	</select>
 			  	<label class="my-1 mr-2" for="inlineFormCustomSelectPref">Year</label>
-				<input class="form-control form-control-lg" type="text" placeholder="Year" required name="year">
-			  	<button type="submit" class="btn btn-primary my-1">Submit</button>
+			  		<select class="custom-select my-1" id="inlineFormCustomSelectPref" required name="year" style="margin-right: 85px">
+			    	<option value="null">0</option>
+			   		<option value="2013">2013</option>
+			    	<option value="2016">2016</option>
+			    	<option value="2017">2017</option>
+			  	</select>
+			  	<button type="submit" class="btn btn-primary my-1" method = 'POST'>Submit</button>
 		  	</div>
 		</form>	
 	</div>
@@ -38,43 +45,57 @@
 		<h1>MOVIES</h1>
 		<table>
 			<tr>
-				<th>Name</th>
-				<th>Genre</th>
-				<th>Director</th>
+				<th>NAME</th>
+				<th>GENRE</th>
+				<th>DIRECTOR</th>
 				<th>IMDb</th>
-				<th>Cast 1</th>
-				<th>Cast 2</th>
-				<th>Release Year</th>
+				<th>CAST 1</th>
+				<th>CAST 2</th>
+				<th>YEAR</th>
 			</tr>
 			{% for item in data1 %}
+			<!-- {% set movie_name=item[1] %} -->
+			 {% set idd=item[0] %} 
 				<tr>
-					<td>{{ item[1] }}</td>
-					<td>{{ item[4] }}</td>
-					<td>{{ item[13] }}</td>
-					<td>{{ item[5] }}</td>
-					<td>{{ item[7] }}</td>
-					<td>{{ item[8] }}</td>
-					<td>{{ item[14] }}</td>
-					<button type="submit" class="btn btn-primary my-1">Submit</button>
+					<form class = "form" action="\feedback" method="POST">
+						<td>{{ idd }}</td> 
+						<td>{{ item[1] }}</td>
+						<td>{{ item[4] }}</td>
+						<td>{{ item[13] }}</td>
+						<td>{{ item[5] }}</td>
+						<td>{{ item[7] }}</td>
+						<td>{{ item[8] }}</td>
+						<td>{{ item[14] }}</td>
+						<td><button required name="1" class="btn btn-primary my-1" placeholder="Feedback"  method = 'POST' value="{{idd}}" >FEEDBACK</button></td>
+						<!-- <td></button><input type="submit" required name="1" placeholder="Feedback" value="{{movie_name}}" method="POST"></button></td> -->
+					</form>
+					<form class="form" action="\watchlist" method="POST">
+						<td><button required name="2" class="btn btn-primary my-1" placeholder="Add to Watchlist"  method = 'POST' value="{{idd}}" >ADD TO WATCHLIST</button></td>
+					</form>
 				</tr>
 			{% endfor %}
 		</table>
 	</div>
+
 	<div>
 		<h1>SHOWS</h1>
 		<table>
-			<tr>
-				<th>Name</th>
-				<th>Genre</th>
-				<th>Director</th>
+		<tr>
+				<th>NAME</th>
+				<th>GENRE</th>
+				<th>DIRECTOR</th>
 				<th>IMDb</th>
-				<th>Cast 1</th>
-				<th>Cast 2</th>
-				<th>Release Year</th>
-				<th>Seasons</th>
+				<th>CAST 1</th>
+				<th>CAST 2</th>
+				<th>STARTED AIRING</th>
+				<th>SEASONS</th>
 			</tr>
+		
 			{% for item in data2 %}
+			 {% set idd=item[0] %} 
 				<tr>
+					<form class = "form" action="\feedback" method="POST">
+					<td>{{ idd }}</td> 
 					<td>{{ item[1] }}</td>
 					<td>{{ item[4] }}</td>
 					<td>{{ item[13] }}</td>
@@ -83,9 +104,18 @@
 					<td>{{ item[8] }}</td>
 					<td>{{ item[14] }}</td>
 					<td>{{ item[16] }}</td>
-					<button type="submit" class="btn btn-primary my-1">Submit</button>
+					<td><button required name="1" class="btn btn-primary my-1" placeholder="Feedback"  method = 'POST' value="{{idd}}" >FEEDBACK</button></td>
+					<!-- <td><button type="submit" class="btn btn-primary my-1" method = 'POST'>Feedback</button></td> -->
+					</form>
+					<form class="form" action="\watchlist" method="POST">
+						<td><button required name="2" class="btn btn-primary my-1" placeholder="Add to Watchlist"  method = 'POST' value="{{idd}}" >ADD TO WATCHLIST</button></td>
+					</form>
+
+				</form>
 				</tr>
 			{% endfor %}
+
+			<!-- <tr>{{ data3 }}</tr> -->
 		</table>
 	</div>
 {% endblock content %}
