--- a/DBMS Project/Flask/templates/hotstarname.html
+++ b/DBMS Project/Flask/templates/hotstarname.html
@@ -13,7 +13,7 @@
 
 	<div>
 		<h1>MOVIES</h1>
-		<table>
+		<table class="table table-dark">
 			{% for item in Name1 %}
 			 {% set idd=item[0] %} 
 				<tr>
