--- a/DBMS Project/Flask/templates/hotstar.html
+++ b/DBMS Project/Flask/templates/hotstar.html
@@ -4,6 +4,7 @@
 
 {% block content %}
 	<div class="container">
+		<h1>HOTSTAR</h1>
 		<a href="{{ url_for('hotstar_name') }}">Search by name</a>
 		<form class="form" action="/hotstar" method="POST">
 			<div class="form-group mx-sm-3 mb-2">
