--- a/DBMS Project/Flask/templates/netflixname.html
+++ b/DBMS Project/Flask/templates/netflixname.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-
+    <h1>NETFLIX</h1>
 	<form class="form" action = "/netflixname" method ='POST'>
 		<label class="my-1 mr-2" for="inlineFormCustomSelectPref">Show Name</label>
 		<input class="form-control form-control-lg" type="text" placeholder="Name" required name="name">
