--- a/DBMS Project/Flask/templates/amazonname.html
+++ b/DBMS Project/Flask/templates/amazonname.html
@@ -3,6 +3,7 @@
 
 
 {% block content %}
+<H1> AMAZON</H1>
 
 	<form class="form" action = "/amazonname" method ='POST'>
 		<label class="my-1 mr-2" for="inlineFormCustomSelectPref">Show Name</label>
