--- a/DBMS Project/Flask/templates/hotstarname.html
+++ b/DBMS Project/Flask/templates/hotstarname.html
@@ -3,6 +3,7 @@
 
 
 {% block content %}
+<h1>HOTSTAR</h1>
 
 	<form class="form" action = "/hotstarname" method ='POST'>
 		<label class="my-1 mr-2" for="inlineFormCustomSelectPref">Show Name</label>
