--- a/DBMS Project/Flask/templates/netflix.html
+++ b/DBMS Project/Flask/templates/netflix.html
@@ -4,6 +4,7 @@
 
 {% block content %}
 	<div class="container">
+		<h1>NETFLIX</h1>
 		<a href="{{ url_for('netflix_name') }}">Search by name</a>
 		<form class="form" action="/netflix" method="POST">
 			<div class="form-group mx-sm-3 mb-2">
